# lumen

./: .claude_tasks.md  .gitignore  CLAUDE.md  Cargo.toml  IMPROVEMENT_LOG.md
crates/flash-app/: Cargo.toml
crates/flash-app/src/: app.rs  main.rs  pipeline.rs  theme.rs  windows_dark.rs
crates/flash-app/src/views/: command_palette.rs  context_menu.rs  filter_bar.rs  info_panel.rs  jump_to_line.rs  left_sidebar.rs  log_view.rs  mod.rs  pipeline_panel.rs  recent_panel.rs  results_panel.rs  search_bar.rs  settings_panel.rs  tab_bar.rs
crates/flash-app/src/widgets/: virtual_list.rs
crates/flash-core/: Cargo.toml
crates/flash-core/src/: file_map.rs  lib.rs  line_index.rs  line_reader.rs  log_level.rs  pipeline.rs  pipeline_worker.rs  search.rs
